# bmstu-iu5-learning-advisor

./: .gitignore  .impeccable.md  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  skills-constructor.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  exceptions.py  main.py
backend/app/admin/: README.md  refresh_rules.py  router.py  rule_lock_service.py  schemas.py  seed.py  service.py
backend/app/auth/: README.md  router.py  schemas.py  security.py  service.py
backend/app/catalog/: README.md  router.py  schemas.py
backend/app/db/: database.py  models.py
backend/app/expert/: README.md  engine.py  evaluator.py  helpers.py  protocols.py  registry.py  router.py  rules_data.py  schemas.py  service.py
backend/app/llm/: README.md  admin_router.py  client.py  prompts.py  protocols.py  router.py  schemas.py  service.py
backend/app/rag/: README.md  bm25.py  embedder.py  protocols.py  qdrant_client.py  router.py  schemas.py  service.py
backend/app/users/: README.md  coverage.py  profile_builder.py  router.py  schemas.py  service.py  workload.py
backend/tests/: conftest.py
backend/tests/integration/: _fakes.py  conftest.py  test_admin.py  test_auth.py  test_catalog.py  test_e2e.py  test_expert.py  test_llm.py  test_rag.py  test_rules_workflow.py  test_users.py
backend/tests/unit/: test_auth_service.py  test_expert_engine.py  test_expert_scenarios.py  test_expert_schemas.py  test_llm_service.py  test_profile_builder.py  test_rag_service.py  (+3 more)
(+141 files in other folders)
